Move to Flask backend for data processing

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./style.css">
-    <script src="./index.js"></script>
+    <script src="./server.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +12,8 @@
 <body>
     <div class="navbar">
         <ul class="navlist">
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./index.html">Schedule Builder</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/main">Schedule Builder</a></li>
         </ul>
     </div>
     <h1>OSU Schedule Builder</h1>
