Start working on input processing

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./server.js"></script>
+    <link rel="stylesheet" href="./static/style.css">
+    <script src="./static/index.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,12 +19,12 @@
     <h1>OSU Schedule Builder</h1>
     <p>Input the classes you want to take and this tool will build you a schedule.</p>
     <button type="button" class="generate-button">Generate a Schedule</button>
-    <input id="class-search-input" type="text" placeholder="Search for a class...">
+
+    <input name="search" list="courses" placeholder="Search for a class..."/>
+    <datalist id="courses"></datalist>
 
     <label for="term-selection">Term</label>
     <select name="Term" id="term-selection">
-        <option value="sp22">Spring 2022</option>
-        <option value="su22">Summer 2022</option>
         <option value="fa22">Fall 2022</option>
     </select>
 
