--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,9 @@
         <option value="fa22">Fall 2022</option>
     </select>
 
-    <p id="classes-info">Your classes:</p>
+    <div class="classes-container">
+        <p id=>Your classes:</p>
+    </div>
     <button type="button" id="clear-button">Clear Schedule</button>
 
 </body>
