--- a/templates/about.html
+++ b/templates/about.html
@@ -10,9 +10,10 @@
 <body>
     <div class="navbar">
         <ul class="navlist">
-            <li><a href="/about">About</a></li>
-            <li><a href="/main">Schedule Builder</a></li>
+            <li class="navitem"><a href="/about">About</a></li>
+            <li class="navitem"><a href="/main">Schedule Builder</a></li>
         </ul>
+        </div>
     <p>This application is still in beta. If you notice a bug, please submit an issue on our GitHub page.
         If you're a developer, consider submitting a pull request. Thank you!
     </p>
