--- a/templates/index.html
+++ b/templates/index.html
@@ -7,32 +7,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OSU Schedule Builder</title>
+    <title>Beaver Builder</title>
 </head>
 
 <body>
-    <div class="navbar">
+    <div class="title">
+        <h1>Beaver Builder</h1>
+    </div>
+    <div class="osulogo">
+        <img src="./static/imgs/osu_logo.png" alt="Oregon State Logo"/>
+    </div>
+    <!-- <div class="navbar">
         <ul class="navlist">
-            <li><a href="/about">About</a></li>
-            <li><a href="/main">Schedule Builder</a></li>
+            <li class="navitem"><a href="/about">About</a></li>
+            <li class="navitem"><a href="/main">Schedule Builder</a></li>
         </ul>
+    </div> -->
+    <div class="tools">
+        <p>Input the classes you want to take and this tool will build you a schedule.</p>
+        <button type="button" class="button" id="generate-button">Generate a Schedule</button>
+
+        <input name="search" list="courses" placeholder="Search for a class..."/>
+        <datalist id="courses"></datalist>
+    
+        <label for="term-selection">Term</label>
+        <select name="Term" id="term-selection">
+            <option value="fa22">Fall 2022</option>
+        </select>
+        <div class="classes-container">
+            <p id=>Your classes:</p>
+        </div>
+        <button type="button" class="button" id="clear-button">Clear Schedule</button>
     </div>
-    <h1>OSU Schedule Builder</h1>
-    <p>Input the classes you want to take and this tool will build you a schedule.</p>
-    <button type="button" id="generate-button">Generate a Schedule</button>
-
-    <input name="search" list="courses" placeholder="Search for a class..."/>
-    <datalist id="courses"></datalist>
-
-    <label for="term-selection">Term</label>
-    <select name="Term" id="term-selection">
-        <option value="fa22">Fall 2022</option>
-    </select>
-
-    <div class="classes-container">
-        <p id=>Your classes:</p>
-    </div>
-    <button type="button" id="clear-button">Clear Schedule</button>
 
 </body>
 </html>
