--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <h1>Beaver Builder</h1>
     </div>
     <div class="osulogo">
-        <img src="./static/imgs/osu_logo.png" alt="Oregon State Logo"/>
+        <!-- <img src="./static/imgs/osu_logo.png" alt="Oregon State Logo"/> -->
     </div>
     <!-- <div class="navbar">
         <ul class="navlist">
@@ -25,7 +25,6 @@
     </div> -->
     <div class="tools">
         <p>Input the classes you want to take and this tool will build you a schedule.</p>
-        <button type="button" class="button" id="generate-button">Generate a Schedule</button>
 
         <input name="search" list="courses" placeholder="Search for a class..."/>
         <datalist id="courses"></datalist>
@@ -37,8 +36,10 @@
         <div class="classes-container">
             <p id=>Your classes:</p>
         </div>
-        <button type="button" class="button" id="clear-button">Clear Schedule</button>
     </div>
+    <button type="button" class="button" id="generate-button">Generate a Schedule</button>
+    <button type="button" class="button" id="clear-button">Clear Schedule</button>
+
 
     <div class="generated-schedule">
         {% if schedule %}
