Scale everything up

--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,10 @@ a {
     margin:5px;
 }
 
+h1 {
+    zoom: 1.6;
+}
+
 .classes-info:hover {
     color:red;
     cursor:pointer;
@@ -34,23 +38,20 @@ a {
     text-align: center;
 }
 
-.osulogo {
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
 .tools {
     text-align: center;
+    zoom: 2;
 }
 
 .button {
+    display:block;
     border: none;
     background: none;
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.9);
+    color: rgba(0, 0, 0, 0.9);
     background: rgb(242, 94, 19);
     padding: 15px 40px;
+    margin: 20px auto;
     border-radius: 4px;
     font-weight: bold;
     text-transform: uppercase;
