Add features to allow support for multiple terms

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
     
         <label for="term-selection">Term</label>
         <select name="Term" id="term-selection">
+            <option value="select">Select a Term</option>
             <option value="fa22">Fall 2022</option>
         </select>
         <div class="classes-container">
