Add scraping scripts and add Winter 2023

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
         <select name="Term" id="term-selection">
             <option value="select">Select a Term</option>
             <option value="fa22">Fall 2022</option>
+            <option value="wi23">Winter 2023</option>
         </select>
         <div class="classes-container">
             <p id=>Your classes:</p>
